# Ghil-Sellers-Energy-Balance-Model

./: .gitignore  README.md  license.txt  pyproject.toml
analysis/: analysis.py
matlab/: README.md  bvp_bc_GSEBM.m  bvp_eq_GSEBM.m  bvp_ic_GSEBM.m  ivp_bc_GSEBM.m  ivp_eq_GSEBM.m  ivp_ic_GSEBM.m  main_GSEBM.m
scripts/: run_edge_mu_bifurcation.py  run_edge_state.py  run_stochastic_state.py  run_warm_cold_mu_bifurcation.py  run_warm_cold_state.py
src/gsebm/: __init__.py  bvp.py  cli.py  diagnostics.py  empirical.py  initial_conditions.py  ivp.py  parameters.py  paths.py  physics.py  plotting.py  run.py  sde.py  time.py
tests/: test_bvp.py  test_diagnostics.py  test_empirical.py  test_interpolation.py  test_ivp.py  test_package.py  test_paths.py  test_physics.py  test_run.py  test_sde.py
