[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "gsebm"
version = "0.1.0"
description = "Python port of the Ghil-Sellers Energy Balance Model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[project.scripts]
gsebm = "gsebm.cli:main"
